@@ -5061,8 +5061,9 @@ public abstract class Element {
 
 	/**
 	 * Negates the given condition as intelligently as possible.
+	 * 
 	 * @param condition - a boolean expression (in Structorizer-conform syntax)
-	 * @return an expression reprsenting the logical opposite of {@code condition}
+	 * @return an expression representing the logical opposite of {@code condition}
 	 */
 	public static String negateCondition(String condition)
 	{
