@@ -106,6 +106,8 @@ Current development version 3.32-10 (2022-08-11)
 - 10: Bugfix #1049: COBOL condition name resolution was still defective <2>
 - 10: Issue #1047: Isolated NSD batch export with new option -k [R. Schmidt]2
 - 10: Issue #1056: Corrections in French locale (and others) [GitHub/tph002]2
+- 10: Issue #1057: COBOL import now converts 'LENGTH OF' into 'sizeof()' <2>
+- 10: Bugfix #1058: Defactive COBOL import of negated condition names <2>
 
 Version 3.32 (2021-09-19) requiring Java 11 or newer
 - 01: Bugfix #851/2: SPECIAL-NAMES sections caused COBOL parser abort <2>
